--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
   <title>JavaScript Group Project</title>
 </head>
 <body>
-  <h1>Hello webpack!</h1>
+  <header>
+    <nav>
+      <li>
+        <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2560px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon">
+      </li>
+      <ul>
+        <li>Pokemon</li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
