Add footer and load logo

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,15 @@
 <body>
   <header>
     <nav>
-      <li>
-        <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2560px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon">
-      </li>
+      <div id="logo"></div>
       <ul>
-        <li>Pokemon</li>
+        <li class="nav-list">Pokemon</li>
       </ul>
     </nav>
   </header>
+  <footer>
+    <hr class="hline">
+    <p>Created by Jose & Nestor under MIT license</p>
+  </footer>
 </body>
 </html>
