--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,17 @@
   <header>
     <nav>
       <div id="logo"></div>
-      <ul>
-        <li class="nav-list">Pokemon</li>
+      <ul class="nav-list">
+        <li class="active">Pokemon</li>
       </ul>
     </nav>
   </header>
+  
+  <section>
+    <div id="list">
+    </div>
+  </section>
+  
   <footer>
     <hr class="hline">
     <p>Created by Jose & Nestor under MIT license</p>
