Add modules, Add modal window

--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,15 @@
     <nav>
       <div id="logo"></div>
       <ul class="nav-list">
-        <li class="active">Pokemon</li>
+        <li class="active pokemon-nav">Pokemon</li>
       </ul>
     </nav>
   </header>
-  
   <section>
     <div id="list">
     </div>
   </section>
-  
   <footer>
-    <hr class="hline">
     <p>Created by Jose & Nestor under MIT license</p>
   </footer>
 </body>
